# llm-router

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh.md  config.yaml
.devcontainer/: Dockerfile  devcontainer.json
src/: auth.rs  config.rs  converter.rs  llm_client.rs  logging.rs  main.rs  model_checks.rs  model_manager.rs  models.rs  request_id.rs  router.rs
src/converters/: helpers.rs  mod.rs  request_wrapper.rs  response_handler.rs  response_wrapper.rs  stream.rs
src/converters/anthropic/: anthropic_content.rs  anthropic_content_block.rs  anthropic_content_object.rs  anthropic_image_source.rs  anthropic_message.rs  anthropic_message_delta.rs  anthropic_metadata.rs  anthropic_request.rs  anthropic_response.rs  anthropic_stream_chunk.rs  anthropic_stream_delta.rs  anthropic_stream_message.rs  anthropic_system_content.rs  anthropic_tool.rs  anthropic_usage.rs  mod.rs
src/converters/gemini/: gemini_block_reason.rs  gemini_candidate.rs  gemini_content.rs  gemini_finish_reason.rs  gemini_function_declaration.rs  gemini_funtion_call.rs  gemini_funtion_response.rs  gemini_generation_config.rs  gemini_harm_category.rs  gemini_harm_probability.rs  gemini_inline_data.rs  gemini_part.rs  gemini_prompt_feedback.rs  gemini_request.rs  gemini_response.rs  gemini_safety_rating.rs  gemini_stream_chunk.rs  gemini_thinking_config.rs  gemini_tool.rs  gemini_usage.rs  mod.rs
src/converters/openai/: mod.rs  openai_choice.rs  openai_tool.rs  (+18 more)
src/model_manager/: health.rs  mod.rs  registry.rs  strategy.rs  types.rs
src/utils/: jq_util.rs  mod.rs
(+21 files in other folders)
