[package]
name = "llm-router"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.0"
notify = "6.1"
axum-macros = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.2"
rand = "0.8"
tempfile = "3.10.0"
